[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "markdownify>=1.2.2",
    "requests>=2.32.5",
]
